# fastomop

./: .gitignore  .pre-commit-config.yaml  README.md  config.toml  pyproject.toml  sample.env
mlruns/0/: meta.yaml
src/fastomop/: __init__.py  config.py  main.py  main2.py  otel.py
src/fastomop/agents/: __init__.py  agent_adapter.py  agent_builder.py  agent_factory.py  agent_protocol.py  langchain_factory.py  llm_builder.py  orchestrator.py  pydantic_factory.py  semantic_agent.py  sql_agent.py  sqlagent.py  supervisor.py
src/fastomop/client/: __init__.py  client.py
src/fastomop/mcp/common/: agent_registry.py
src/fastomop/mcp/sql/: db.py  server.py  sql_validator.py
src/fastomop/prompts/: bootstrap.py
