[project]
name = "fastomop"
version = "0.1.0"
description = "OMOP. Fast..."
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "llm",
    "mcp server",
    "ohdsi",
    "omop",
    "a2a",
    "a2a server",
    "fastomop",
    "evaluation",
    "monitoring",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]


authors = [{ name = "nikomoegre" }, { name = "vvcb" }]
requires-python = ">=3.13"
# Some of these dependencies are unnecessary and will be removed in the future.
dependencies = [
    "fastmcp>=2.10.6",
    "ibis-framework[duckdb]>=10.6.0",
    "mcp[cli]>=1.12.0",
    "pydantic-ai>=0.4.4",
    "pydantic-settings>=2.10.1",
    "langfuse>=3.2.4",
]

[project.scripts]
fastomop = "fastomop:main.main"
fastomop_mcp_sql = "fastomop.mcp.sql.server:main"

[project.optional-dependencies]

mcp-postgres = ["ibis-framework[postgres]>=10.6.0", "psycopg>=3.2.9"]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]
